make books endpoint public
